--- a/Cooling.html
+++ b/Cooling.html
@@ -5,37 +5,66 @@
         <meta charset="UTF-8">
         <title>PARKES</title>
 
-      
-        <link rel="shortcut icon" href="img/16.jpg" type="image/vnd.microsoft.icon">
-        <link rel="stylesheet" href="stylesheets/screencooling.css" type="text/css">
-        <script type='text/javascript' src="scripts/classie.js"></script>
-        <script type='text/javascript' src="scripts/script.js"></script>
+      <link rel="shortcut icon" href="img/favicon.ico" type="image/vnd.microsoft.icon">
+    <link rel="stylesheet" href="stylesheets/screencooling.css" type="text/css">
+	<link rel="stylesheet" type="text/css" href="./slick/slick.css"/>
+    <link rel="stylesheet" type="text/css" href="./slick/slick-theme.css"/>
+    
+	
+	<script
+	  src="https://code.jquery.com/jquery-3.2.1.min.js"
+	  integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
+	  crossorigin="anonymous"></script>
+	  
+	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery-migrate/3.0.1/jquery-migrate.min.js"></script>
+	<script type="text/javascript" src="slick/slick.min.js"></script>
+    <script type='text/javascript' src="scripts/script.js"></script>
 
-        <meta name="viewport" content="width=device-width, initial-scale=1" />
-    </head>
-    <body id="body">
+    <meta name="viewport" content="width=device-width, initial-scale=1"/>
+  </head>
+  <body id="body">
 
-        <div id='header-background' class="container">
-            <div id="logo" class="topLogo">
-                    PARKES
-            </div>
-            <div id='nav-menu' class="topNav">
-                <nav role="full-horizontal" align-"centre">
-                    <ul>
-                        <li><a href="#">Home</a></li>
-                        <li><a href="#">Intro</a></li>
-                        <li><a href="#">Chassis</a></li>
-                        <li><a href="#">Swingarm</a></li>
-                        <li><a href="#">Engine</a></li>
-						<li><a href="#">Aero</a></li>
-                        <li><a href="#">Cooling</a></li>
-                        <li><a href="#">Exhausts</a></li>
-                        <li><a href="#">Contact</a></li>
-                        <li><a href="#">Events</a></li>
-                    </ul>
-                </nav>
-            </div>
-        </div>
+    <div id='header-background' class="container">
+      <div id="logo" class="topLogo">
+        PARKES
+      </div>
+      <div id='nav-menu' class="topNav">
+        <nav role="full-horizontal" align-"centre"="align-" centre""="centre" "">
+          <ul>
+            <li>
+              <a href="./index.html">Home</a>
+            </li>
+            <li>
+              <a href="./Introduction.html">Intro</a>
+            </li>
+            <li>
+              <a href="./Chassis.html">Chassis</a>
+            </li>
+            <li>
+              <a href="./Swingarm.html">Swingarm</a>
+            </li>
+            <li>
+              <a href="./Engine.html">Engine</a>
+            </li>
+            <li>
+              <a href="./Aero.html">Aero</a>
+            </li>
+            <li>
+              <a href="./Cooling.html">Cooling</a>
+            </li>
+            <li>
+              <a href="./Exhausts.html">Exhausts</a>
+            </li>
+            <li>
+              <a href="./Contact.html">Contact</a>
+            </li>
+            <li>
+              <a href="./Events.html">Events</a>
+            </li>
+          </ul>
+        </nav>
+      </div>
+    </div>
 
         <div id="spacer-div"></div>
 
@@ -43,38 +72,62 @@
         <div id="title1-light">Cooling</div>
         <div class="narrow-content" style="color:#ffffff">The story behind the development</div>
       </div>
-
+<br>
+<br>
         <div id="content-background">
             <div id="title1">Keeping it cool</div>
 
             <div class="main-container">
       <div class="grid-span">
         <h2>The history behind it</h2>
-        Cooling has been the big headache and a fast learning curve for me. But I can at least say it is under control, albeit not ideal though. I have endured 6 different pump impeller designs and countless radiator and path revisions. None came up to scratch. With each year of development came lots more power which may be new news to most racers; it is not a direct correlation to thermal efficiencies. 
+        Cooling has been the big headache and a fast learning curve for me. But I can at least say it is under control, albeit not ideal though. I have endured 6 different pump impeller designs and countless radiator and path revisions. None came up to scratch. With each year of development came lots more power which maybe new news to most racers; it is not a direct correlation to thermal efficiencies. 
       </div>
+	  <div class="image-left-container">
+          <img src="img/032.jpg" class="image-left">
+          <div class="image-text">
+            Prototype 7075 impeller; 1 off 6
+          </div>
+		  </div>
       <div class="grid-left-two">
         <h2>The Problem</h2>
-         The big alkilees heal is the liners and the open decks. The V4 Honda is a great block to work with but the open deck has pressure limitations. I distorted 3 blocks each within 20 minutes of use due to the sheer thermal and compression expansion rates in the combustion chamber. Both of which I knew nothing about when I started tuning. Yes, yes I know; If I had studied and drawn it in CAD in the first place I would of known all this but then I wouldn’t be building the bike: I would be talking about it down the pub instead.
+         The big alkilees heal is the liners and the open decks. The V4 Honda is a great block to work with but the open deck have pressure limitations. I distorted 3 blocks each within 20 minutes of use due to the sheer thermal and compression expansion rates in the combustion chamber. Both of which I knew nothing about when I started tuning. Yes, yes I know; If I had studied and drawn it in CAD in the first place I would of known all this but then I wouldn’t be building the bike: I would be talking about it down the pub instead.
       </div>
+	  <div class="image-right-container">
+          <img src="img/thermostat.jpg" class="image-right">
+          <div class="image-text">
+            Intricate temperature sensor housing manually machined
+          </div>
+		  </div>
       <div class="grid-right-three">
-        <h2>How it was done</h2>
+	       <h2>How it was done</h2>
          Boring and shrinking the many sets of liners in was a full 35 hour weekend of eyes wide open flat out concentration on Freddy’s Bridgeport to get everything just right for shrinking and machining. All faces and bores within 10 microns and super slow cuts to minimise the distortion through heat and vibration from my primitive homemade boring tools and Freddy’s excellent engine jig. I eventually ended up using my manual Bridgeport to do the last 2 engines which I actually preferred because I wasn’t sleeping in an industrial unit in Peterborough next to a compressor; I was in my own workshop.
       </div>
+	   <div class="image-left-container">
+          <img src="img/front rad.jpg" class="image-left">
+          <div class="image-text">
+		  Front radiator: Coolant pipes were packed with sand and hot bent
+          </div>
+		  </div>
       <div class="grid-wide-center">
         <h2>The result</h2>
-        I digress, the coolant system has now a super powered 7 blade, billet machined impeller with reduced cavitation along with a massive 5 litres, 3 radiator, double pass setup, all in high pressure areas. Not the low pressure; stick it where we’ve got space like the old conventional approach. I made the rads from 1050 sheet and mounting lugs with 6082 using 1050 and 5083 rods respectively. Getting the air out is a cow; multiple bleed points required! Very satisfying making a radiator, I’d recommend it as therapy.
+        I digress, the coolant system has now a super powered 7 blade, billet machined impeller with reduced cavitation along with a massive 5 litres, 3 radiator, double pass setup, all in high pressure areas. Not the low pressure; stick it where we’ve got space like the old conventional approach. I made the rads from 1050 sheet and mounting lugs with 6082 using 1050 and 5356 rods respectively. Pre heated to a uniform 150°C before welding. Getting the air out is a cow; multiple bleed points required! Very satisfying making a radiator, I’d recommend it as therapy.
       </div>
       <div class="grid-narrow-center">
         <h2>What's next?</h2>
-        I would like to be at the point where I could see what the pressures were in different parts of the engine as I know I have huge pressures around the jackets and I am simply masking it with a huge cooling system which by the way could still do with coming down another 10 degrees. Normalised race temp is currently 92C; throwing away a good 5hp is just not on.
+        I would like to be at the point where I could see what the pressures were in different parts of the engine as I know I have huge pressures around the jackets and I am simply masking it with a huge cooling system. Normalised race temp is currently 92°C; this is a far from ideal performance temperature. 75-80°C is where the optimum trade between power and reliability exists. I am throwing away a good 5hp which is just not on.
 The additional water, rads, pipes and ducting is costing me performance in so many ways it’s upsetting; the drag of air passing through so much finned vertical face, the weight of all that water, the mechanical strain of pushing all that water, the additional width to my frontal area and the compromise to the high pressure ducting to the engine. The answer is to make my own engine with thicker sections around the bores and use composite coatings. It would mean making everything again as I would have so much space to use for all the good things again. Perhaps a compromise would be to do the engine and keep everything the same but slow the flow right down? Maybe not, I’m getting older faster, best not stitch myself up for another 5 years of work just yet.
-      <img src="img/001.jpg" class="image-left">
-      <div class="grid-wide-center">
-	  </div>
-	  <div class="grid-narrow-center">
+      </div>
+          </div>
+	  	  <div class="grid-narrow-center">
         <h2>Foundry needed</h2>
-	  The multiple last place finishes have been down to the steering and/or spikes in poor cooling. I have built in many safe guards to protect the engine from melting. Anything over 85 degrees and the acceleration injection correction starts to drop off, mixture richens and advance drops. The ECU then monitors conditions as the temp rises further which effectively drops performance to the point where it feels like you are towing a dead horse. It does just enough to let me coast for the remaining laps and try to maintain corner speed whilst cruising down the straights just to get lap experience. There is so much to evaluate as well as ‘race’ that the amount of laps needed is high. The most ideal trade of power to reliability for the thickness of liner I am using in this application is 75 water temp and 110 oil temp. The best I have been able to obtain is 90 degrees at sustained maximum cylinder pressure. If my calculations are right; at 14K RPM it is flowing a massive 3.3 litres of water every second! The temperature rises 5 degrees by dropping to 10K RPM; I can only imagine the pockets of dancing steam around the jackets at those temperatures, surface temperature of the pistons must be pushing high 300’s. Not helped by the fact that modern pistons are so minimal there is less surface to conduct the heat to the thermally inferior liners. If only I had a foundry
+	  The multiple last place finishes have been down to the steering and/or spikes in poor cooling. I have built in many safe guards to protect the engine from melting. Anything over 85 degrees and the acceleration injection correction starts to drop off, mixture richens and advance drops. The ECU then monitors conditions as the temp rises further which effectively drops performance to the point where it feels like you are towing a dead horse. It does just enough to let me coast for the remaining laps and try to maintain corner speed whilst cruising down the straights just to get lap experience. There is so much to evaluate as well as ‘race’ that the amount of laps needed is high. If my calculations are right; at 14K rpm it is flowing a massive 3.3 litres of water every second! The temperature rises 5 degrees by dropping to 10K rpm; I like (or perhaps in this case I don't like) to imagine the pockets of dancing steam around the jackets at those temperatures, surface temperature of the pistons must be pushing high 300’s. Not helped by the fact that modern pistons are so wasted there is less surface to conduct the heat to the thermally inferior liners. If only I had a foundry!
         </div>
+		<img src="img/001.jpg" class="image-centre">
+          <div class="image-text">
+            Cut through of the air flow through the seat section passing through the curved radiator: 1 off 3
+          </div>
+		</div>
+		</div>
         <div id="footer-background">
           <p> <span style="font: 3.5em 'Oswald', sans-serif"> PARKES </span> <br> The Road Race Motorcycle </p>
 
