--- a/exhausts.html
+++ b/exhausts.html
@@ -5,38 +5,66 @@
         <meta charset="UTF-8">
         <title>PARKES</title>
 
-      <script type='text/javascript' src='http://ajax.googleapis.com/ajax/libs/jquery/1.6.4/jquery.min.js?ver=1.4.2'></script>
-        <script src="https://use.fontawesome.com/10386a299c.js"></script>
-        <link rel="shortcut icon" href="img/16.jpg" type="image/vnd.microsoft.icon">
-        <link rel="stylesheet" href="stylesheets/screenexhausts.css" type="text/css">
-        <script type='text/javascript' src="scripts/classie.js"></script>
-        <script type='text/javascript' src="scripts/script.js"></script>
+      <link rel="shortcut icon" href="img/favicon.ico" type="image/vnd.microsoft.icon">
+    <link rel="stylesheet" href="stylesheets/screenexhausts.css" type="text/css">
+	<link rel="stylesheet" type="text/css" href="./slick/slick.css"/>
+    <link rel="stylesheet" type="text/css" href="./slick/slick-theme.css"/>
+    
+	
+	<script
+	  src="https://code.jquery.com/jquery-3.2.1.min.js"
+	  integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
+	  crossorigin="anonymous"></script>
+	  
+	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery-migrate/3.0.1/jquery-migrate.min.js"></script>
+	<script type="text/javascript" src="slick/slick.min.js"></script>
+    <script type='text/javascript' src="scripts/script.js"></script>
 
-        <meta name="viewport" content="width=device-width, initial-scale=1" />
-    </head>
-    <body id="body">
+    <meta name="viewport" content="width=device-width, initial-scale=1"/>
+  </head>
+  <body id="body">
 
-        <div id='header-background' class="container">
-            <div id="logo" class="topLogo">
-                    PARKES
-            </div>
-            <div id='nav-menu' class="topNav">
-                <nav role="full-horizontal" align-"centre">
-                    <ul>
-                        <li><a href="#">Home</a></li>
-                        <li><a href="#">Intro</a></li>
-                        <li><a href="#">Chassis</a></li>
-                        <li><a href="#">Swingarm</a></li>
-                        <li><a href="#">Engine</a></li>
-						<li><a href="#">Aero</a></li>
-                        <li><a href="#">Cooling</a></li>
-                        <li><a href="#">Exhausts</a></li>
-                        <li><a href="#">Contact</a></li>
-                        <li><a href="#">Events</a></li>
-                    </ul>
-                </nav>
-            </div>
-        </div>
+    <div id='header-background' class="container">
+      <div id="logo" class="topLogo">
+        PARKES
+      </div>
+      <div id='nav-menu' class="topNav">
+        <nav role="full-horizontal" align-"centre"="align-" centre""="centre" "">
+          <ul>
+            <li>
+              <a href="./index.html">Home</a>
+            </li>
+            <li>
+              <a href="./Introduction.html">Intro</a>
+            </li>
+            <li>
+              <a href="./Chassis.html">Chassis</a>
+            </li>
+            <li>
+              <a href="./Swingarm.html">Swingarm</a>
+            </li>
+            <li>
+              <a href="./Engine.html">Engine</a>
+            </li>
+            <li>
+              <a href="./Aero.html">Aero</a>
+            </li>
+            <li>
+              <a href="./Cooling.html">Cooling</a>
+            </li>
+            <li>
+              <a href="./Exhausts.html">Exhausts</a>
+            </li>
+            <li>
+              <a href="./Contact.html">Contact</a>
+            </li>
+            <li>
+              <a href="./Events.html">Events</a>
+            </li>
+          </ul>
+        </nav>
+      </div>
+    </div>
 
         <div id="spacer-div"></div>
 
@@ -44,30 +72,45 @@
         <div id="title1-light">Exhausts</div>
         <div class="narrow-content" style="color:#ffffff">The story behind the development</div>
       </div>
-
+<br>
+<br>
         <div id="content-background">
             <div id="title1">Exhausts fabricated by hand</div>
 
             <div class="main-container">
       <div class="grid-span">
-        <h2>The history behind it</h2>
-        The journey into exhausts was guided by cost. I bought quite a trick pipe bending table but it just wasn’t upto thin walled tube, especially the shapes I wanted to produce. I really needed to be able to offer each section up to the engine and frame which is nearly impossible to do with both cold and hot bends. The sand filled bend is a good one but only if the exhaust comes first and the rest of the body and electrics follows.
-My first few systems were actually for customers bikes, one or 2 ducati’s were the first and simple too. They weren’t that great; the welds were deep and wide. I couldn’t get the fusion weld right because I couldn’t afford the right kit. I was cutting each section with an angle grinder and trying to get them flat with a flap wheel. Do that 100 times and you’ll start dreaming of a chop saw too. Invariably there were gaps because I didn’t put argon in the pipes too (didn’t want to use up too much gas did I – not cheap argon)
-By the time I came around to make my first v4 system I did a back to back trial on the dyno with a mandrel bent tube system and discovered something interesting which do this day I still don’t fully understand but I know roughly how to repeat it and all I’ll say is it puts a smile on my face when I hear folk stating exhausts are all about smooth radius bends and back pressure. It’s something you can’t achieve with your off the shelf system but they sell enough of them so what do they care.
+	  		<div class="image-left-container">
+          <img src="img/ti can.jpg" class="image-left">
+          <div class="image-text">
+            Grade 2 fusion welded titanium silencer just 510g
+          </div>
+		  </div>
+        <h2 align="left">The history behind it</h2>
+        The journey into exhausts was tainted by cost. I bought quite a trick pipe bending table but it just wasn’t upto thin walled tube, especially the shapes I wanted to produce. I really needed to be able to offer each section up to the engine and frame which is nearly impossible to do with both cold and hot bends. The sand filled bend is a good one but only if the exhaust comes first and the rest of the body and electrics follows.
+My first few systems were done the hard way, I couldn’t get the fusion weld right because I couldn’t afford the right kit. I was cutting each section with an angle grinder and trying to get them flat with a flap wheel. Do that 100 times and you’ll start dreaming of a chop saw too. Invariably there were gaps because I didn’t put argon in the pipes too (didn’t want to use up too much expensive gas back then)
+By the time I came around to make my first v4 system I did a back to back trial on the dyno with a mandrel bent tube system and discovered something interesting which do this day I still don’t fully understand but I know roughly how to repeat it and all I’ll say is it puts a smile on my face when I hear folk stating exhausts are all about smooth radius bends and back pressure. It’s something you can’t achieve with an 'off the shelf systems'; but they sell enough of them so why change?
       </div>
       <div class="grid-left-two">
-        <h2>Where it came from</h2>
+        <h2 align="left">Where it came from</h2>
         Most lobster sections are made for aesthetic reasons. I have come across small articles referring to the unpredictable wizardry of tumbling harmonic waves and the scavenging pressures they induce but they all concluded it doesn’t make sense. It would be interesting to hear if others have played with this and what they found. 
       </div>
       <div class="grid-right-three">
-        <h2>More is better</h2>
+        <h2 align="left"> More is better</h2>
+		<div class="image-right-container">
+		<img src="img/003.jpg" class="image-right">
+          <div class="image-text">
+            Fusion welded header pipes
+          </div>
+		  </div>
         It’s a real shame that exhaust manufactures don’t advertise the benefits and trade off’s for various exhaust designs. They seem to offer the one and only ‘off the shelf’ solution for that bike with a choice of pretty silencers. There’s not one tyre that does all grounds and conditions; most have a sticker with ratings for economy and wet road handling. Imagine what a tyre would perform like if they got rid of this and kept you in the dark and simply gave you what you thought was best for everyone and how much better the bike next to you would go if he knew what tyre he (or she) needed! As competition and skills develop the demand for performance is greater. Unfortunately the average buyer wants top end, balls out of the bath, check me out horse power potential so the market has followed the demand; can’t blame them. 
 	  </div>
-      <div class="grid-wide-center">
-	  <img src="img/003.jpg" class="image-right">
-        <h2>The science</h2>
-        The exhausts I have made follow some slightly different calcs compared to what most seem to be using. To give a condensed summary, my pipes tend to be smaller in i.d, longer in length and normally use particular type of merge venture where required. When making thin walled sections you need to be very careful with residual stress. Even a small amount will induce a crack within 100miles; fluctuations in heat can increase and decrease this significantly; sometimes wrapping the headers can prolong the life of a suspect system by maintaining a slightly more stable condition and dampen the ambient harmonics induced from the pulses of firing and mechanical reciprocation. But maybe forget that as ACU rules stipulate you can’t use heat wrap on exhausts?
+	  <div class="grid-wide-center">
+	  <h2>The science</h2>
+        Unlike gas flow work in other areas of an engine; the exhausts require very specific calculations to acheive the best outcome. Each specialist will use their own secrets; the numbers and consequently the results vary massively. The exhausts I have made follow some slightly different calculations compared to what most seem to be using. To give a condensed summary, my pipes tend to be smaller in i.d on the primary, slightly longer in length and normally use a particular type of merge venturi where required. When making thin walled sections you need to be very careful with residual stress. Even a small amount will induce a crack within 100 miles; fluctuations in heat can increase and decrease this significantly; sometimes wrapping the headers can prolong the life of a suspect system by maintaining a slightly more stable condition and dampen the ambient harmonics induced from the pulses of firing and mechanical reciprocation. But maybe forget that as ACU rules stipulate you can’t use heat wrap on exhausts?
       </div>
+	  
+	  </div>
+	  </div>
              
         <div id="footer-background">
           <p> <span style="font: 3.5em 'Oswald', sans-serif"> PARKES </span> <br> The Road Race Motorcycle </p>
