--- a/index.html
+++ b/index.html
@@ -7,9 +7,15 @@
 
     <script type='text/javascript' src='http://ajax.googleapis.com/ajax/libs/jquery/1.6.4/jquery.min.js?ver=1.4.2'></script>
     <script src="https://use.fontawesome.com/10386a299c.js"></script>
-    <link rel="shortcut icon" href="img/16.jpg" type="image/vnd.microsoft.icon">
+    <link rel="shortcut icon" href="img/favicon.ico" type="image/vnd.microsoft.icon">
     <link rel="stylesheet" href="stylesheets/screenindex.css" type="text/css">
-    <script type='text/javascript' src="scripts/classie.js"></script>
+    <link rel="stylesheet" type="text/css" href="./slick/slick.css"/>
+    <link rel="stylesheet" type="text/css" href="./slick/slick-theme.css"/>
+
+    <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
+
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery-migrate/3.0.1/jquery-migrate.min.js"></script>
+    <script type="text/javascript" src="slick/slick.min.js"></script>
     <script type='text/javascript' src="scripts/script.js"></script>
 
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
@@ -21,37 +27,37 @@
         PARKES
       </div>
       <div id='nav-menu' class="topNav">
-        <nav role="full-horizontal" align-"centre"="align-" centre""="centre""">
+        <nav role="full-horizontal" align-"centre"="align-" centre""="centre" "">
           <ul>
             <li>
-              <a href="/">Home</a>
+              <a href="./index.html">Home</a>
             </li>
             <li>
-              <a href="#">Intro</a>
+              <a href="./Introduction.html">Intro</a>
             </li>
             <li>
-              <a href="#">Chassis</a>
+              <a href="./Chassis.html">Chassis</a>
             </li>
             <li>
-              <a href="#">Swingarm</a>
+              <a href="./Swingarm.html">Swingarm</a>
             </li>
             <li>
-              <a href="#">Engine</a>
+              <a href="./Engine.html">Engine</a>
             </li>
             <li>
-              <a href="/Aero.html">Aero</a>
+              <a href="./Aero.html">Aero</a>
             </li>
             <li>
-              <a href="#">Cooling</a>
+              <a href="./Cooling.html">Cooling</a>
             </li>
             <li>
-              <a href="#">Exhausts</a>
+              <a href="./Exhausts.html">Exhausts</a>
             </li>
             <li>
-              <a href="#">Contact</a>
+              <a href="./Contact.html">Contact</a>
             </li>
             <li>
-              <a href="#">Events</a>
+              <a href="./Events.html">Events</a>
             </li>
           </ul>
         </nav>
@@ -70,101 +76,21 @@
 
       <div class='container2'>
         <div class="col1">
-          <i class="fa fa-tachometer fa-5x" style="color:#e91e63"></i>
-          <h2>The bike</h2>
-          <div>Built by Tom Parkes<br>Hand built with no influence from exisiting designs</div>
+          <i class="fa fa-road fa-5x" style="color:#00bcd4"></i>
+          <h2>Raced at the toughest race track in the world</h2>
+          <div>Where better to develop a prototype chassis with a unique suspension design than in between stone walls on public roads?</div>
           <p style="margin-top:1em">
-            <a href="https://thedonkey.uk/intro">
+            <a href="https://www.tparkes.co.uk/intro">
               <button>
                 Read the reports
               </button>
             </a>
           </p>
         </div>
-        <div class="col1">
-          <i class="fa fa-wrench fa-5x" style="color:#4caf50"></i>
-          <h2>With a unique suspension design</h2>
-          <div>A rising rate, twin wishbone construction offering remarkable control under braking and plush suspension movement</div>
-          <p style="margin-top:1em">
-            <a href="https://thedonkey.uk/chassis">
-              <button>
-                See how it was built</button>
-            </a>
-          </p>
-          <div style="height=50em"></div>
-        </div>
-        <div class="col1">
-          <i class="fa fa-road fa-5x" style="color:#00bcd4"></i>
-          <h2>Raced at the toughest race track in the world</h2>
-          <div>Where better to develop a suspension design than in between stone walls on public roads?</div>
-          <p style="margin-top:2em">
-            <a href="https://thedonkey.uk/events">
-              <button>
-                Read the race reports</button>
-            </a>
-          </p>
-        </div>
-        <span class="stretch"></span>
-      </div>
-
-      <div style="height:3em"></div>
-
-      <div id="title1">Years of development</div>
-
-      <div class='container2'>
-        <div class="col2">
-          <div>&#8226 3 sets of fairings
-            <br>&#8226 a bank of 4 throttle bodies
-            <br>&#8226 4 air box designs
-            <br>&#8226 An aluminium petrol tank<br>&#8226 2 swingarms<br></div>
-        </div>
-        <div class="col2">
-          <div>&#8226 3 exhaust systems
-            <br>
-            &#8226 6 water pump impellers<br>&#8226 5 sets of pistons<br>&#8226 3 rear shock absorbers<br>&#8226 6 different coolant flows<br></div>
-        </div>
-        <div class="col2">
-          <div>&#8226 2 sets of double wishbones<br>&#8226 8 cardboard suspension linkage models<br>&#8226 3 wooden suspension linkage models
-            <br>&#8226 3 top yokes<br>&#8226 5 front subframes</div>
-        </div>
-        <span class="stretch"></span>
-      </div>
-      <p style="text-align:center">and many other parts in between</p>
-
-      <div style="height:5em"></div>
-
-      <div id="title1">Follow the story as the developments continue</div>
-
-      <div class='container2'>
-
-        <div class="col1">
-          <i class="fa fa-motorcycle fa-5x" style="color:#00bcd4"></i>
-          <h2>View the gallery</h2>
-          <div>Look through the archives of old designs and watch how it has evolved</div>
-          <p style="margin-top:2em">
-            <a href="https://thedonkey.uk/gallery">
-              <button>
-                View the Gallery here
-              </button>
-            </a>
-          </p>
-        </div>
-        <div class="col1">
-          <i class="fa fa-thumbs-o-up fa-5x" style="color:#00bcd4"></i>
-          <h2>Leave your comments to the reports</h2>
-          <div>Share your comments on the bike and what you make of it</div>
-          <p style="margin-top:2em">
-            <a href="https://thedonkey.uk/contact">
-              <button>
-                view open comments
-              </button>
-            </a>
-          </p>
-        </div>
-        <span class="stretch"></span>
       </div>
 
     </div>
+
     <div id="footer-background">
       <p>
         <span style="font: 3.5em 'Oswald', sans-serif">
@@ -174,7 +100,47 @@
         The Road Race Motorcycle
       </p>
 
+      <div class="carousel-container">
+        <div class="slider-parkes">
+          <div>
+            <div class="slider-item">
+              <img src="img/southern1.jpg" class="slider-image" alt="">
+              <div class="slider-text">
+                2017 chassis - the safer and stronger chassis</a>
+            </div>
+          </div>
+        </div>
+        <div>
+          <div class="slider-item">
+            <img src="img/002.jpeg" class="slider-image" alt="">
+            <div class="slider-text">
+              2017 cooling capacity increased 30%</a>
+          </div>
+        </div>
+      </div>
+      <div>
+        <div class="slider-item">
+          <img src="img/southern3.JPG" class="slider-image" alt="">
+          <div class="slider-text">
+            Church bends 2016</a>
+        </div>
+      </div>
     </div>
-
-  </body>
+    <div>
+      <div class="slider-item">
+        <img src="img/main.jpeg" class="slider-image" alt="">
+        <div class="slider-text">
+          2016 chassis - the elastic chassis</a>
+      </div>
+    </div>
+  </div>
+</div>
+</div>
+<script type="text/javascript" src="slick/slick.js"></script>
+<script type="text/javascript" src="scripts/index.js"></script>
+</div>
+<div class="grid-wide-center">
+<h6>Photo courtesy of Dave Kneen Photography</h6>
+</div>
+</body>
 </html>
