--- a/Events.html
+++ b/Events.html
@@ -6,36 +6,66 @@
         <title>PARKES</title>
 
       
-        <link rel="shortcut icon" href="img/16.jpg" type="image/vnd.microsoft.icon">
-        <link rel="stylesheet" href="stylesheets/screen.css" type="text/css">
-        <script type='text/javascript' src="scripts/classie.js"></script>
-        <script type='text/javascript' src="scripts/script.js"></script>
+        <link rel="shortcut icon" href="img/favicon.ico" type="image/vnd.microsoft.icon">
+    <link rel="stylesheet" href="stylesheets/screenevents.css" type="text/css">
+	<link rel="stylesheet" type="text/css" href="./slick/slick.css"/>
+    <link rel="stylesheet" type="text/css" href="./slick/slick-theme.css"/>
+    
+	
+	<script
+	  src="https://code.jquery.com/jquery-3.2.1.min.js"
+	  integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
+	  crossorigin="anonymous"></script>
+	  
+	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery-migrate/3.0.1/jquery-migrate.min.js"></script>
+	<script type="text/javascript" src="slick/slick.min.js"></script>
+    <script type='text/javascript' src="scripts/script.js"></script>
 
-        <meta name="viewport" content="width=device-width, initial-scale=1" />
-    </head>
-    <body id="body">
+    <meta name="viewport" content="width=device-width, initial-scale=1"/>
+  </head>
+  <body id="body">
 
-        <div id='header-background' class="container">
-            <div id="logo" class="topLogo">
-                    PARKES
-            </div>
-            <div id='nav-menu' class="topNav">
-                <nav role="full-horizontal" align-"centre">
-                    <ul>
-                        <li><a href="#">Home</a></li>
-                        <li><a href="#">Intro</a></li>
-                        <li><a href="#">Chassis</a></li>
-                        <li><a href="#">Swingarm</a></li>
-                        <li><a href="#">Engine</a></li>
-						<li><a href="#">Aero</a></li>
-                        <li><a href="#">Cooling</a></li>
-                        <li><a href="#">Exhausts</a></l
-                        <li><a href="#">Contact</a></li>
-                        <li><a href="#">Events</a></li>
-                    </ul>
-                </nav>
-            </div>
-        </div>
+    <div id='header-background' class="container">
+      <div id="logo" class="topLogo">
+        PARKES
+      </div>
+      <div id='nav-menu' class="topNav">
+        <nav role="full-horizontal" align-"centre"="align-" centre""="centre" "">
+          <ul>
+            <li>
+              <a href="./index.html">Home</a>
+            </li>
+            <li>
+              <a href="./Introduction.html">Intro</a>
+            </li>
+            <li>
+              <a href="./Chassis.html">Chassis</a>
+            </li>
+            <li>
+              <a href="./Swingarm.html">Swingarm</a>
+            </li>
+            <li>
+              <a href="./Engine.html">Engine</a>
+            </li>
+            <li>
+              <a href="./Aero.html">Aero</a>
+            </li>
+            <li>
+              <a href="./Cooling.html">Cooling</a>
+            </li>
+            <li>
+              <a href="./Exhausts.html">Exhausts</a>
+            </li>
+            <li>
+              <a href="./Contact.html">Contact</a>
+            </li>
+            <li>
+              <a href="./Events.html">Events</a>
+            </li>
+          </ul>
+        </nav>
+      </div>
+    </div>
 
         <div id="spacer-div"></div>
 
@@ -43,14 +73,15 @@
         <div id="title1-light">Events</div>
         <div class="narrow-content" style="color:#ffffff">The story behind the development</div>
       </div>
-
+<br>
+<br>
         <div id="content-background">
             <div id="title1">Upcoming events 2018</div>
 
             <div class="main-container">
       <div class="grid-span">
         <h2>The development program</h2>
-        The bike has had a tough few years; 10 months of development and 2 months out on the track for the past 3 years; with frequent frantic machining in that 2 months too! So 2018 will be more composed; perhaps using the isle of man race events as a first test for 10 months of development is unorthodox? Or maybe i'm just optimistic about the potential. 2018 will be a healthier mix of UK based safe circuits to develop the chassis, experiment with swingarm lengths and monitor cooling characterisitcs as the further engine modifications are installed.
+        The bike has had a tough few years; typically 11 months of development and just 4 weeks out on the track for the past 3 years; with frequent frantic machining in that 4 weeks too! So 2018 will be more composed; perhaps using the isle of man race events as a first test was unorthodox? Or maybe I was over optimistic about it's potential. 2018 will be a healthier mix of UK based safe circuits to develop the chassis, experiment with swingarm lengths and monitor cooling characterisitcs as the further engine modifications are installed.
       </div>
       <div class="grid-left-two">
         <h2>Club Racing</h2>
@@ -67,13 +98,16 @@
       </div>
       <div class="grid-wide-center">
         <h2>Results</h2>
-        The bike has seen many revisions to chassis and engine over the past 3 years it has been seriously developed the results have been consistantly poor, most races have been in preservation mode due to severly high engine temperatures. There was only one occasion when everything worked; qualifying in the wet at the southern 100 in 2015. The water spray has a brilliant capability to disspatae heat from the radiators. I was riding around many top flight bikes who were tip toeing around. I managed to qualify mid pack in the superbike race which was pleasing considering at the time I had 100hp less than the front runners.
+        The bike has seen many revisions to the chassis and engine over the past 3 years. It has been seriously developed but yet the results have been consistantly poor, most races have been in preservation mode due to severly high engine temperatures. There was only one occasion when everything worked; qualifying in the wet at the southern 100 in 2015. The water spray has a brilliant capability to disspatae heat from the radiators. I was riding around many top flight bikes who were tip toeing around. I managed to qualify mid pack in the superbike race which was pleasing considering at the time I had 100hp less than the front runners.
       </div>
         </div>
+		</div>
         <div id="footer-background">
           <p> <span style="font: 3.5em 'Oswald', sans-serif"> PARKES </span> <br> The Road Race Motorcycle </p>
 
         </div>
-
+		      <div class="grid-wide-center">
+        <h6>Photo courtesy of Dave Kneen Photography</h6>
+</div>
     </body>
 </html>
