--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
           <h2>Raced at the toughest race track in the world</h2>
           <div>Where better to develop a prototype chassis with a unique suspension design than in between stone walls on public roads?</div>
           <p style="margin-top:1em">
-            <a href="https://www.tparkes.co.uk/intro">
+            <a href="/introduction.html">
               <button>
                 Read the reports
               </button>
@@ -102,45 +102,37 @@
 
       <div class="carousel-container">
         <div class="slider-parkes">
-          <div>
-            <div class="slider-item">
-              <img src="img/southern1.jpg" class="slider-image" alt="">
-              <div class="slider-text">
-                2017 chassis - the safer and stronger chassis</a>
+          <div class="slider-item">
+            <img src="img/southern1.jpg" class="slider-image" alt="">
+            <div class="slider-text">
+              2017 chassis - the safer and stronger chassis
+            </div>
+          </div>
+          <div class="slider-item">
+            <img src="img/002.jpg" class="slider-image" alt="">
+            <div class="slider-text">
+              2017 cooling capacity increased 30%
+            </div>
+          </div>
+          <div class="slider-item">
+            <img src="img/southern3.jpg" class="slider-image" alt="">
+            <div class="slider-text">
+              Church bends 2016
+            </div>
+          </div>
+          <div class="slider-item">
+            <img src="img/main.jpg" class="slider-image" alt="">
+            <div class="slider-text">
+              2016 chassis - the elastic chassis
             </div>
           </div>
         </div>
-        <div>
-          <div class="slider-item">
-            <img src="img/002.jpeg" class="slider-image" alt="">
-            <div class="slider-text">
-              2017 cooling capacity increased 30%</a>
-          </div>
-        </div>
       </div>
-      <div>
-        <div class="slider-item">
-          <img src="img/southern3.JPG" class="slider-image" alt="">
-          <div class="slider-text">
-            Church bends 2016</a>
-        </div>
-      </div>
+      <script type="text/javascript" src="slick/slick.js"></script>
+      <script type="text/javascript" src="scripts/index.js"></script>
     </div>
-    <div>
-      <div class="slider-item">
-        <img src="img/main.jpeg" class="slider-image" alt="">
-        <div class="slider-text">
-          2016 chassis - the elastic chassis</a>
-      </div>
+    <div class="grid-wide-center">
+      <h6>Photo courtesy of Dave Kneen Photography</h6>
     </div>
-  </div>
-</div>
-</div>
-<script type="text/javascript" src="slick/slick.js"></script>
-<script type="text/javascript" src="scripts/index.js"></script>
-</div>
-<div class="grid-wide-center">
-<h6>Photo courtesy of Dave Kneen Photography</h6>
-</div>
-</body>
+  </body>
 </html>
